fix: hiding button on mobile

--- a/src/theme/DocItem/Header/styles.module.css
+++ b/src/theme/DocItem/Header/styles.module.css
@@ -28,6 +28,12 @@
     padding-top: 0.75rem;
 }
 
+@media (max-width: 996px) {
+    .markdown {
+        display: none;
+    }
+}
+
 .markdownButton {
     display: flex !important;
     align-items: center;
